--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ streamlit==1.32.2
 numpy==1.26.4
 pandas==2.2.2
 scikit-learn==1.4.2
-xgboost==2.0.3
+scipy==1.11.4
 matplotlib==3.8.4
 seaborn==0.13.2
+xgboost==2.0.3
